<resources>
    <string name="app_name">Chiommy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="okeke_chioma_princess">  Okeke Chioma Princess</string>
    <string name="_17cj022531">17CJ022531</string>
    <string name="about_app">About App</string>
    <string name="todo">TODO</string>
    <string name="cen414">CEN414</string>
    <string name="below_is_the_igr_for_the_36_states_of_nigeria_in_billions">Below is the IGR for the 36 states of Nigeria in billions</string>
    <!--<string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string> -->
    <string name="welcome_to_infogram_the_place_to_be_for_the_latest_revenue_statistics_for_nigeria_i_hope_you_find_the_data_you_are_looking_for">Welcome to infogram, the place to be for the latest revenue statistics for Nigeria. I hope you find the data you are looking for</string>
    <string name="nice_to_meet_you">Nice to see you again</string>
    <string name="login">login</string>
    <string name="welcome">Welcome!</string>
    <string name="register">Register</string>
    <string name="you_are_not_a_member">You\'re not a member?</string>
</resources>